# spi-to-can-rp2350

./: CMakeLists.txt  README.md
src/: mcp2518fd.c  mcp2518fd.h  mcp2518fd_hw.h  mcp2518fd_internal.h
